--- a/style.css
+++ b/style.css
@@ -11,24 +11,22 @@ body{
 }
 
 .card{
-    width: 90%;
-    max-width: 400px;
-    /* background: linear-gradient(135deg, #00feba, #5b548a); */
+    width: 350px;
     background-image: url(image/earth.jpg);
     background-size: cover;
     background-position: center;
     color: #fff;
-    margin: 100px auto 0;
+    margin: 2rem auto;
     border-radius: 20px;
-    padding: 40px 35px;
+    padding: 2.5rem 1rem;
     text-align: center;
 }
 
 .search{
-    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    position: relative;
 }
 
 .search input{
@@ -37,26 +35,18 @@ body{
     background: #eee;
     color: #000;
     font-weight: 600;
-    font-size: 18px;
-    padding: 10px 25px;
-    margin-right: 16px;
-    height: 40px;
     border-radius: 50px;
-    flex: 1;
-}
-
-.search button{
-    border: 0;
-    outline: 0;
-    background: #ebfffc;
-    border-radius: 50%;
-    width: 40px;
+    padding: 10px 25px;
     height: 40px;
-    cursor: pointer;
+    width: 100%;
 }
 
-.search button img{
-    height: 20px;
+.search img{
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    position: absolute;
+    right: 5px;
 }
 
 .weather h1{
@@ -103,10 +93,9 @@ body{
 }
 
 .error{
-    text-align: left;
-    margin-left: 10px;
-    font-size: 16px;
-    margin-top: 10px;
+    text-align: center;
+    font-size: 1rem;
+    margin-top: 8rem;
     color: #d30808;
     font-weight: bold;
     display: none;
